<resources>
    <string name="app_name">TpCursadaMoviles</string>
    <string name="buttonSegEnt">SEGUNDA ENTREGA</string>
    <string name="buttonMas">+</string>
    <string name="buttonMenos">-</string>
    <string name="ButtonDiv">/</string>
    <string name="buttonMult">*</string>
    <string name="textResultado">Resultado:</string>
    <string name="buttonDone">DONE</string>
    <string name="buttonValor2" />
    <string name="val1">Valor 1:</string>
    <string name="val2">Valor 2:</string>
    <string name="PrimeraEntrega">PRIMERA ENTREGA</string>
    <string name="buttonTerEnt">TERCERA ENTREGA</string>
    <string name="start">start</string>
    <string name="reset">reset</string>
    <string name="stop">stop</string>
    <string name="step">step</string>
    <string name="contador">contador</string>
    <string name="buttonIS">IntentService</string>
    <string name="testViewIS">IS:</string>
    <string name="buttonS">Service</string>
    <string name="textS">S:</string>
    <string name="buttonBS">Bound Service</string>
    <string name="textBS">BS:</string>
    <string name="cuartaEntrega">cuartaEntrega</string>
</resources>
