<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegundaEntrega">

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="522dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="104dp">

        <Button
            android:id="@+id/buttonIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Intent Service" />

        <TextView
            android:id="@+id/textViewIS"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/testViewIS" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="46dp" />

        <Button
            android:id="@+id/buttonS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonS" />

        <TextView
            android:id="@+id/textS"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/textS" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="46dp" />

        <Button
            android:id="@+id/buttonBS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonBS" />

        <TextView
            android:id="@+id/textBS"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/textBS" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="46dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>