<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculo">

    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="595dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="68dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp"
            tools:layout_editor_absoluteX="-170dp"
            tools:layout_editor_absoluteY="527dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/val1"
            tools:layout_editor_absoluteX="-170dp"
            tools:layout_editor_absoluteY="549dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp"
            tools:layout_editor_absoluteX="-170dp"
            tools:layout_editor_absoluteY="527dp" />

        <EditText
            android:id="@+id/buttonValor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="number|numberSigned"
            android:onClick="mostrarBotonTerminar"
            android:singleLine="true"
            tools:layout_editor_absoluteX="-73dp"
            tools:layout_editor_absoluteY="605dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp"
            tools:layout_editor_absoluteX="-170dp"
            tools:layout_editor_absoluteY="527dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/val2"
            tools:layout_editor_absoluteX="-170dp"
            tools:layout_editor_absoluteY="1130dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp"
            tools:layout_editor_absoluteX="-170dp"
            tools:layout_editor_absoluteY="527dp" />

        <EditText
            android:id="@+id/buttonValor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="number|numberSigned"
            android:onClick="mostrarBotonTerminar"
            android:singleLine="true"
            tools:layout_editor_absoluteX="-77dp"
            tools:layout_editor_absoluteY="1187dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp"
            tools:layout_editor_absoluteX="-170dp"
            tools:layout_editor_absoluteY="527dp" />

        <Button
            android:id="@+id/buttonDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="calcularResultado"
            android:text="@string/buttonDone"
            tools:layout_editor_absoluteX="-73dp"
            tools:layout_editor_absoluteY="1309dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp"
            tools:layout_editor_absoluteX="-170dp"
            tools:layout_editor_absoluteY="527dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>